# moonlight-steam-shortcuts

./: Cargo.toml  README.md
.github/workflows/: ci.yml  release.yaml  release.yml  rust.yaml
scripts/: install  moonlight-flatpak
src/: boxart.rs  main.rs  moonlight.rs  steam.rs  steamcdn.rs  steamgriddb.rs  steamstore.rs
