[package]
name = "moonlight-steam-shortcuts"
version = "0.3.4"
edition = "2021"

[dependencies]
clap = { version = "4.5.5", features = ["derive"] }
csv = "1.3.0"
dialoguer = "0.11.0"
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
libc = "0.2"
serde = { version = "1.0", features = ["derive"] }
steam_shortcuts_util = "1.1.8"
ureq = { version = "2", features = ["json"] }
urlencoding = "2"
which = "6.0.1"
xdg = "2.5.2"
